--- a/scss/app.scss
+++ b/scss/app.scss
@@ -19,6 +19,10 @@ $half-black: #d1d1d1;
 $little-red: #ff0000;
 $bgWhite: #f6f6f6;
 
+.semiWhite {
+    color: $bgWhite;
+}
+
 // fonts variable
 $bold: ECBold;
 $light: ECLight;
@@ -1877,6 +1881,278 @@ main {
             @include resp($xl) {
                 grid-column: 3/5;
                 grid-row: 2/3;
+            }
+        }
+    }
+}
+
+// ---------------- old way vs new way --------------------------
+#oldWayNewWay {
+    .container {
+        background-color: white;
+        padding: 50px;
+        @include resp($sm) {
+            padding: 50px 0px!important;
+        }
+        @include resp($lg) {
+            padding: 85px 65px!important;
+        }
+        @include resp($xl) {
+            padding: 110px 90px!important;
+        }
+        @include resp($mxl) {
+            padding: 130px 100px!important;
+        }
+        //  main heading
+        .main_heading {
+            .section_heading {
+                span {
+                    color: #d1d1d1;
+                }
+            }
+            // section description
+            .section_description {
+                margin-top: 15px;
+                font-family: $medium;
+                @include resp($xl) {
+                    margin-top: 5px;
+                }
+                @include resp($xxl) {
+                    margin-top: 10px;
+                }
+                @include resp($mxl) {
+                    margin-top: 15px;
+                }
+                span {
+                    // font-size: 17px;
+                    font-size: 14px;
+                    @include resp($xs) {
+                        font-size: 15.5px;
+                    }
+                    @include resp ($sm) {
+                        display: block;
+                        font-size: 20px;
+                    }
+                    @include resp ($md) {
+                        font-size: 24px;
+                    }
+                    @include resp($xl) {
+                        font-size: 25px !important;
+                        margin-top: 5px;
+                    }
+                    @include resp($xxl) {
+                        font-size: 32px !important;
+                        margin-top: 10px;
+                    }
+                    @include resp($mxl) {
+                        font-size: 36px !important;
+                        margin-top: 15px;
+                    }
+                    &:last-child {
+                        margin-top: 0px!important;
+                    }
+                }
+            }
+        }
+        // all list wrapper
+        .allListWrapper {
+            margin-top: 25px;
+                @include resp ($sm) {
+                    display: flex;
+                    justify-content: space-between;
+                }
+                @include resp ($lg) {
+                
+                } 
+            // list common style
+            .item_list {
+                // list tittle
+                .list_tittle {
+                    color: $little-red;
+                    font-size: 23px;
+                    @include resp($sm) {
+                        font-size: 28px;
+                    }
+                    @include resp ($md) {
+                        font-size: 36px;
+                    }
+                    @include resp ($lg) {
+                        font-size: 38px;
+                    }
+                    @include resp($xl) {
+                        font-size: 40px;
+                        margin-top: 5px;
+                    }
+                    @include resp($xxl) {
+                        font-size: 42px;
+                        margin-top: 10px;
+                    }
+                    @include resp($mxl) {
+                        font-size: 45px;
+                        margin-top: 15px;
+                    }
+                }
+                // lists
+                .list {
+                    list-style: none;
+                    padding-left: 0px;
+                    @include resp ($md) {
+                        margin-top: 20px;
+                    }
+                    @include resp ($xxl) {
+                        margin-top: 30px;
+                    }
+                    // list item
+                    li {
+                        display: flex;
+                        flex-flow: row wrap;
+                        justify-items: flex-start;
+                        align-items: center;
+                        margin-bottom: 10px;
+                        @include resp ($md) {
+                            margin-bottom: 15px;
+                        }
+                        @include resp ($xxl) {
+                            margin-bottom: 35px;
+                        }
+                        @include resp ($mxl) {
+                            margin-bottom: 45px;
+                        }
+                        // images
+                        .iconWrap {
+                            width: 25px;
+                            height: 25px;
+                            border-radius: 50%;
+                            border: 1px solid
+                                lighten($color: #000000, $amount: 85);
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            margin-right: 10px;
+                            @include resp($xl) {
+                                width: 32px;
+                                height: 32px;
+                                margin-right: 20px;
+                            } 
+                            @include resp($xxl) {
+                                margin-right: 25px;
+                                width: 35px;
+                                height: 35px;
+                            }
+                            img {
+                                width: 11px;
+                                display: block;
+                                margin-bottom: -1px;
+                                @include resp ($xl) {
+                                    width: 15px;
+
+                                }
+                            }
+                        }
+                        // texts 
+                        .medium {
+                            font-size: 16px;
+                            text-decoration: line-through;
+                            @include resp ($sm) {
+                                font-size: 12px;
+                            }
+                            @include resp ($md) {
+                                font-size: 17px;
+                            }
+                            @include resp ($lg) {
+                                font-size: 20px;
+                            }
+                            @include resp ($xl) {
+                                font-size: 22px;
+                            }
+                            @include resp ($xxl) {
+                                font-size: 26px;
+                            }
+                            @include resp ($mxl) {
+                                font-size: 28px;
+                            }
+                        }
+                    }
+                }
+            }
+            // left list 
+            .left_list {
+                @include resp ($sm) {
+                    width: 40%;
+                    flex-basis: 40%;
+                }
+            }
+            // center list 
+            .center_list {
+                padding-top: 25px;
+                padding-bottom: 50px;
+                @include resp ($sm) {
+                    flex-basis: 20%;
+                    width: 20%;
+                    padding-bottom: 0px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                @include resp ($lg) {
+                    justify-content: flex-start;
+                }
+                img {
+                    width: 80px;
+                    transform-origin: center center;
+                    transform: rotate(100deg);
+                    display: inline-block;
+                    margin-left: 100px;
+                    @include resp($sm) {
+                        margin-left: 0px;
+                        transform: rotate(0deg);
+                        width: 55px;
+                        margin-top: -5px;
+                    }
+                    @include resp ($md) {
+                        width: 115px;
+                    }
+                    @include resp($lg) {
+                        width: 140px;
+                    }
+                    @include resp ($xxl) {
+                        width: 165px;
+                    }
+                    @include resp ($mxl) {
+                        width: 180px;
+                    }
+                }
+            }
+            // right list 
+            .right_list {
+                @include resp($sm) {
+                    width: 40%;
+                    flex-basis: 40%;
+                }
+                h3 {
+                    color: black!important;
+                    img {
+                        width: 115px;
+                        @include resp($sm) {
+                            width: 125px;
+                        }
+                        @include resp($md) {
+                            width: 165px;
+                        }
+                        @include resp($xxl) {
+                            width: 190px;
+                        }
+                        @include resp($mxl) {
+                            width: 205px;
+                        }
+                    }
+                }
+                // list 
+                li {
+                    h6 {
+                        text-decoration: none!important;
+                    }
+                }
             }
         }
     }
