--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1892,16 +1892,16 @@ main {
         background-color: white;
         padding: 50px;
         @include resp($sm) {
-            padding: 50px 0px!important;
+            padding: 50px 0px !important;
         }
         @include resp($lg) {
-            padding: 85px 65px!important;
+            padding: 85px 65px !important;
         }
         @include resp($xl) {
-            padding: 110px 90px!important;
+            padding: 110px 90px !important;
         }
         @include resp($mxl) {
-            padding: 130px 100px!important;
+            padding: 130px 100px !important;
         }
         //  main heading
         .main_heading {
@@ -1929,11 +1929,11 @@ main {
                     @include resp($xs) {
                         font-size: 15.5px;
                     }
-                    @include resp ($sm) {
+                    @include resp($sm) {
                         display: block;
                         font-size: 20px;
                     }
-                    @include resp ($md) {
+                    @include resp($md) {
                         font-size: 24px;
                     }
                     @include resp($xl) {
@@ -1949,7 +1949,7 @@ main {
                         margin-top: 15px;
                     }
                     &:last-child {
-                        margin-top: 0px!important;
+                        margin-top: 0px !important;
                     }
                 }
             }
@@ -1957,13 +1957,12 @@ main {
         // all list wrapper
         .allListWrapper {
             margin-top: 25px;
-                @include resp ($sm) {
-                    display: flex;
-                    justify-content: space-between;
-                }
-                @include resp ($lg) {
-                
-                } 
+            @include resp($sm) {
+                display: flex;
+                justify-content: space-between;
+            }
+            @include resp($lg) {
+            }
             // list common style
             .item_list {
                 // list tittle
@@ -1973,10 +1972,10 @@ main {
                     @include resp($sm) {
                         font-size: 28px;
                     }
-                    @include resp ($md) {
+                    @include resp($md) {
                         font-size: 36px;
                     }
-                    @include resp ($lg) {
+                    @include resp($lg) {
                         font-size: 38px;
                     }
                     @include resp($xl) {
@@ -1996,10 +1995,10 @@ main {
                 .list {
                     list-style: none;
                     padding-left: 0px;
-                    @include resp ($md) {
+                    @include resp($md) {
                         margin-top: 20px;
                     }
-                    @include resp ($xxl) {
+                    @include resp($xxl) {
                         margin-top: 30px;
                     }
                     // list item
@@ -2009,13 +2008,13 @@ main {
                         justify-items: flex-start;
                         align-items: center;
                         margin-bottom: 10px;
-                        @include resp ($md) {
+                        @include resp($md) {
                             margin-bottom: 15px;
                         }
-                        @include resp ($xxl) {
+                        @include resp($xxl) {
                             margin-bottom: 35px;
                         }
-                        @include resp ($mxl) {
+                        @include resp($mxl) {
                             margin-bottom: 45px;
                         }
                         // images
@@ -2033,7 +2032,7 @@ main {
                                 width: 32px;
                                 height: 32px;
                                 margin-right: 20px;
-                            } 
+                            }
                             @include resp($xxl) {
                                 margin-right: 25px;
                                 width: 35px;
@@ -2043,50 +2042,49 @@ main {
                                 width: 11px;
                                 display: block;
                                 margin-bottom: -1px;
-                                @include resp ($xl) {
+                                @include resp($xl) {
                                     width: 15px;
-
                                 }
                             }
                         }
-                        // texts 
+                        // texts
                         .medium {
                             font-size: 16px;
                             text-decoration: line-through;
-                            @include resp ($sm) {
+                            @include resp($sm) {
                                 font-size: 12px;
                             }
-                            @include resp ($md) {
+                            @include resp($md) {
                                 font-size: 17px;
                             }
-                            @include resp ($lg) {
+                            @include resp($lg) {
                                 font-size: 20px;
                             }
-                            @include resp ($xl) {
+                            @include resp($xl) {
                                 font-size: 22px;
                             }
-                            @include resp ($xxl) {
+                            @include resp($xxl) {
                                 font-size: 26px;
                             }
-                            @include resp ($mxl) {
+                            @include resp($mxl) {
                                 font-size: 28px;
                             }
                         }
                     }
                 }
             }
-            // left list 
+            // left list
             .left_list {
-                @include resp ($sm) {
+                @include resp($sm) {
                     width: 40%;
                     flex-basis: 40%;
                 }
             }
-            // center list 
+            // center list
             .center_list {
                 padding-top: 25px;
                 padding-bottom: 50px;
-                @include resp ($sm) {
+                @include resp($sm) {
                     flex-basis: 20%;
                     width: 20%;
                     padding-bottom: 0px;
@@ -2094,7 +2092,7 @@ main {
                     align-items: center;
                     justify-content: center;
                 }
-                @include resp ($lg) {
+                @include resp($lg) {
                     justify-content: flex-start;
                 }
                 img {
@@ -2109,28 +2107,28 @@ main {
                         width: 55px;
                         margin-top: -5px;
                     }
-                    @include resp ($md) {
+                    @include resp($md) {
                         width: 115px;
                     }
                     @include resp($lg) {
                         width: 140px;
                     }
-                    @include resp ($xxl) {
+                    @include resp($xxl) {
                         width: 165px;
                     }
-                    @include resp ($mxl) {
+                    @include resp($mxl) {
                         width: 180px;
                     }
                 }
             }
-            // right list 
+            // right list
             .right_list {
                 @include resp($sm) {
                     width: 40%;
                     flex-basis: 40%;
                 }
                 h3 {
-                    color: black!important;
+                    color: black !important;
                     img {
                         width: 115px;
                         @include resp($sm) {
@@ -2147,12 +2145,40 @@ main {
                         }
                     }
                 }
-                // list 
+                // list
                 li {
                     h6 {
-                        text-decoration: none!important;
+                        text-decoration: none !important;
                     }
                 }
+            }
+        }
+    }
+}
+
+// <!-- ----------------------------------------- iddentefy 3 bottleck ----------------------------->
+#iddentefy3Bottleck {
+    // section description
+    .section_description {
+        @extend .root_section_description;
+        display: block!important;
+        span {
+            display: inline;
+            @include resp($lg) {
+                display: block;
+                margin-top: 0px !important;
+            }
+            @media only screen and (min-width: $lg) and (max-width: $xl) {
+                font-size: 18px !important;
+            }
+            @media only screen and (min-width: $xl) and (max-width: $xxl) {
+                font-size: 22px !important;
+            }
+            @include resp($xxl) {
+                font-size: 25px !important;
+            }
+            @include resp($mxl) {
+                font-size: 31px !important;
             }
         }
     }
