faq section complete

--- a/css/app.css
+++ b/css/app.css
@@ -53,7 +53,7 @@
   font-family: ECLight;
 }
 
-.regular, .text__buttons .btn_txt_medium, .sm_root_card_para, main #mainContainer .card__element .para_wrap p, .sm_root_card .para, .visual_card_list .visual_card .para {
+.regular, #faq #faqList .accordion-body .section_description span, .text__buttons .btn_txt_medium, .sm_root_card_para, main #mainContainer .card__element .para_wrap p, .sm_root_card .para, .visual_card_list .visual_card .para {
   font-family: ECRegular;
 }
 
@@ -2346,153 +2346,153 @@ main #mainContainer .card__element:nth-child(4) {
   }
 }
 
-#oldWayNewWay .container {
+.oldWayStyles .container {
   background-color: white;
   padding: 50px;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container {
+  .oldWayStyles .container {
     padding: 50px 0px !important;
   }
 }
 @media only screen and (min-width: 992px) {
-  #oldWayNewWay .container {
+  .oldWayStyles .container {
     padding: 85px 65px !important;
   }
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container {
+  .oldWayStyles .container {
     padding: 110px 90px !important;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container {
+  .oldWayStyles .container {
     padding: 130px 100px !important;
   }
 }
-#oldWayNewWay .container .main_heading .section_heading span {
+.oldWayStyles .container .main_heading .section_heading span {
   color: #d1d1d1;
 }
-#oldWayNewWay .container .main_heading .section_description {
+.oldWayStyles .container .main_heading .section_description {
   margin-top: 15px;
   font-family: ECMedium;
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container .main_heading .section_description {
+  .oldWayStyles .container .main_heading .section_description {
     margin-top: 5px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .main_heading .section_description {
+  .oldWayStyles .container .main_heading .section_description {
     margin-top: 10px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .main_heading .section_description {
+  .oldWayStyles .container .main_heading .section_description {
     margin-top: 15px;
   }
 }
-#oldWayNewWay .container .main_heading .section_description span {
+.oldWayStyles .container .main_heading .section_description span {
   font-size: 14px;
 }
 @media only screen and (min-width: 425px) {
-  #oldWayNewWay .container .main_heading .section_description span {
+  .oldWayStyles .container .main_heading .section_description span {
     font-size: 15.5px;
   }
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .main_heading .section_description span {
+  .oldWayStyles .container .main_heading .section_description span {
     display: block;
     font-size: 20px;
   }
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .main_heading .section_description span {
+  .oldWayStyles .container .main_heading .section_description span {
     font-size: 24px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container .main_heading .section_description span {
+  .oldWayStyles .container .main_heading .section_description span {
     font-size: 25px !important;
     margin-top: 5px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .main_heading .section_description span {
+  .oldWayStyles .container .main_heading .section_description span {
     font-size: 32px !important;
     margin-top: 10px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .main_heading .section_description span {
+  .oldWayStyles .container .main_heading .section_description span {
     font-size: 36px !important;
     margin-top: 15px;
   }
 }
-#oldWayNewWay .container .main_heading .section_description span:last-child {
+.oldWayStyles .container .main_heading .section_description span:last-child {
   margin-top: 0px !important;
 }
-#oldWayNewWay .container .allListWrapper {
+.oldWayStyles .container .allListWrapper {
   margin-top: 25px;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper {
+  .oldWayStyles .container .allListWrapper {
     display: flex;
     justify-content: space-between;
   }
 }
-#oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+.oldWayStyles .container .allListWrapper .item_list .list_tittle {
   color: #ff0000;
   font-size: 23px;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+  .oldWayStyles .container .allListWrapper .item_list .list_tittle {
     font-size: 28px;
   }
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+  .oldWayStyles .container .allListWrapper .item_list .list_tittle {
     font-size: 36px;
   }
 }
 @media only screen and (min-width: 992px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+  .oldWayStyles .container .allListWrapper .item_list .list_tittle {
     font-size: 38px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+  .oldWayStyles .container .allListWrapper .item_list .list_tittle {
     font-size: 40px;
     margin-top: 5px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+  .oldWayStyles .container .allListWrapper .item_list .list_tittle {
     font-size: 42px;
     margin-top: 10px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list_tittle {
+  .oldWayStyles .container .allListWrapper .item_list .list_tittle {
     font-size: 45px;
     margin-top: 15px;
   }
 }
-#oldWayNewWay .container .allListWrapper .item_list .list {
+.oldWayStyles .container .allListWrapper .item_list .list {
   list-style: none;
   padding-left: 0px;
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list {
+  .oldWayStyles .container .allListWrapper .item_list .list {
     margin-top: 20px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list {
+  .oldWayStyles .container .allListWrapper .item_list .list {
     margin-top: 30px;
   }
 }
-#oldWayNewWay .container .allListWrapper .item_list .list li {
+.oldWayStyles .container .allListWrapper .item_list .list li {
   display: flex;
   flex-flow: row wrap;
   justify-items: flex-start;
@@ -2500,21 +2500,21 @@ main #mainContainer .card__element:nth-child(4) {
   margin-bottom: 10px;
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li {
+  .oldWayStyles .container .allListWrapper .item_list .list li {
     margin-bottom: 15px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li {
+  .oldWayStyles .container .allListWrapper .item_list .list li {
     margin-bottom: 35px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li {
+  .oldWayStyles .container .allListWrapper .item_list .list li {
     margin-bottom: 45px;
   }
 }
-#oldWayNewWay .container .allListWrapper .item_list .list li .iconWrap {
+.oldWayStyles .container .allListWrapper .item_list .list li .iconWrap {
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -2525,75 +2525,75 @@ main #mainContainer .card__element:nth-child(4) {
   margin-right: 10px;
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .iconWrap {
+  .oldWayStyles .container .allListWrapper .item_list .list li .iconWrap {
     width: 32px;
     height: 32px;
     margin-right: 20px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .iconWrap {
+  .oldWayStyles .container .allListWrapper .item_list .list li .iconWrap {
     margin-right: 25px;
     width: 35px;
     height: 35px;
   }
 }
-#oldWayNewWay .container .allListWrapper .item_list .list li .iconWrap img {
+.oldWayStyles .container .allListWrapper .item_list .list li .iconWrap img {
   width: 11px;
   display: block;
   margin-bottom: -1px;
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .iconWrap img {
+  .oldWayStyles .container .allListWrapper .item_list .list li .iconWrap img {
     width: 15px;
   }
 }
-#oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+.oldWayStyles .container .allListWrapper .item_list .list li .medium {
   font-size: 16px;
   text-decoration: line-through;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
     font-size: 12px;
   }
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
     font-size: 17px;
   }
 }
 @media only screen and (min-width: 992px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
     font-size: 20px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
     font-size: 22px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
     font-size: 26px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
     font-size: 28px;
   }
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .left_list {
+  .oldWayStyles .container .allListWrapper .left_list {
     width: 40%;
     flex-basis: 40%;
   }
 }
-#oldWayNewWay .container .allListWrapper .center_list {
+.oldWayStyles .container .allListWrapper .center_list {
   padding-top: 25px;
   padding-bottom: 50px;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .center_list {
+  .oldWayStyles .container .allListWrapper .center_list {
     flex-basis: 20%;
     width: 20%;
     padding-bottom: 0px;
@@ -2603,11 +2603,11 @@ main #mainContainer .card__element:nth-child(4) {
   }
 }
 @media only screen and (min-width: 992px) {
-  #oldWayNewWay .container .allListWrapper .center_list {
+  .oldWayStyles .container .allListWrapper .center_list {
     justify-content: flex-start;
   }
 }
-#oldWayNewWay .container .allListWrapper .center_list img {
+.oldWayStyles .container .allListWrapper .center_list img {
   width: 80px;
   transform-origin: center center;
   transform: rotate(100deg);
@@ -2615,7 +2615,7 @@ main #mainContainer .card__element:nth-child(4) {
   margin-left: 100px;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .center_list img {
+  .oldWayStyles .container .allListWrapper .center_list img {
     margin-left: 0px;
     transform: rotate(0deg);
     width: 55px;
@@ -2623,58 +2623,58 @@ main #mainContainer .card__element:nth-child(4) {
   }
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .allListWrapper .center_list img {
+  .oldWayStyles .container .allListWrapper .center_list img {
     width: 115px;
   }
 }
 @media only screen and (min-width: 992px) {
-  #oldWayNewWay .container .allListWrapper .center_list img {
+  .oldWayStyles .container .allListWrapper .center_list img {
     width: 140px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .center_list img {
+  .oldWayStyles .container .allListWrapper .center_list img {
     width: 165px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .allListWrapper .center_list img {
+  .oldWayStyles .container .allListWrapper .center_list img {
     width: 180px;
   }
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .right_list {
+  .oldWayStyles .container .allListWrapper .right_list {
     width: 40%;
     flex-basis: 40%;
   }
 }
-#oldWayNewWay .container .allListWrapper .right_list h3 {
+.oldWayStyles .container .allListWrapper .right_list h3 {
   color: black !important;
 }
-#oldWayNewWay .container .allListWrapper .right_list h3 img {
+.oldWayStyles .container .allListWrapper .right_list h3 img {
   width: 115px;
 }
 @media only screen and (min-width: 576px) {
-  #oldWayNewWay .container .allListWrapper .right_list h3 img {
+  .oldWayStyles .container .allListWrapper .right_list h3 img {
     width: 125px;
   }
 }
 @media only screen and (min-width: 768px) {
-  #oldWayNewWay .container .allListWrapper .right_list h3 img {
+  .oldWayStyles .container .allListWrapper .right_list h3 img {
     width: 165px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  #oldWayNewWay .container .allListWrapper .right_list h3 img {
+  .oldWayStyles .container .allListWrapper .right_list h3 img {
     width: 190px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  #oldWayNewWay .container .allListWrapper .right_list h3 img {
+  .oldWayStyles .container .allListWrapper .right_list h3 img {
     width: 205px;
   }
 }
-#oldWayNewWay .container .allListWrapper .right_list li h6 {
+.oldWayStyles .container .allListWrapper .right_list li h6 {
   text-decoration: none !important;
 }
 
@@ -2709,6 +2709,30 @@ main #mainContainer .card__element:nth-child(4) {
   #iddentefy3Bottleck .section_description span {
     font-size: 31px !important;
   }
+}
+
+#faq .container {
+  background-color: transparent;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+#faq #faqList {
+  margin-top: 30px;
+}
+#faq #faqList .accordion-item {
+  background-color: transparent;
+}
+#faq #faqList .accordion-item .accordion-button {
+  background-color: transparent;
+}
+#faq #faqList .accordion-item .accordion-button::after {
+  background-image: url("../img/icon/list icon/plus.png");
+  background-size: 15px 15px;
+  transform-origin: center center;
+}
+#faq #faqList .accordion-item .accordion-button:not(.collapsed)::after {
+  background-image: url("../img/icon/list icon/minus.png");
+  background-size: 15px 4px;
 }
 
 /*# sourceMappingURL=app.css.map */
