--- a/css/app.css
+++ b/css/app.css
@@ -2750,16 +2750,47 @@ main #mainContainer .card__element:nth-child(4) {
     background-color: #000000d9 !important;
     justify-content: center;
   }
-
-  .navbar-toggler {
-    position: relative;
-    z-index: 5000;
-    width: 28px;
+  .navbar-collapse .nav-item {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: right !important;
   }
 
   .navbar .navbar-nav .nav-item .nav-link {
     color: white !important;
     display: inline-block;
+  }
+}
+@media only screen and (min-width: 0px) {
+  .navbar .navbar-nav .nav-item .nav-link a {
+    font-size: 13px !important;
+  }
+}
+@media only screen and (min-width: 420px) {
+  .navbar .navbar-nav .nav-item .nav-link a {
+    font-size: 15px !important;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .navbar .navbar-nav .nav-item .nav-link a {
+    font-size: 16px !important;
+  }
+}
+
+.navbar-toggler {
+  position: relative;
+  z-index: 5000;
+  width: 23px;
+}
+@media only screen and (min-width: 576px) {
+  .navbar-toggler {
+    width: 24.5px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .navbar-toggler {
+    width: 26px;
   }
 }
 
