--- a/css/app.css
+++ b/css/app.css
@@ -38,13 +38,6 @@
   font-family: ECSemiBold;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 .semiWhite {
   color: #f6f6f6;
 }
@@ -141,15 +134,61 @@
   background-color: #f6f6f6 !important;
 }
 
+.cus_btn, .sm_cus_btn {
+  font-family: ECSemiBold;
+  border-radius: 1px;
+  background-color: #ffcd00;
+  color: black !important;
+  display: inline-block;
+  text-decoration: none;
+  border: none;
+  padding: 10px 15px !important;
+  text-align: center;
+}
+.cus_btn, .sm_cus_btn {
+  font-size: 10px;
+}
+@media screen and (min-width: 310px) {
+  .cus_btn, .sm_cus_btn {
+    font-size: calc( 10px + 6 * ( (100vw - 310px) / 682 ) );
+  }
+}
+@media screen and (min-width: 992px) {
+  .cus_btn, .sm_cus_btn {
+    font-size: 16px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .cus_btn, .sm_cus_btn {
+    font-size: 16px;
+    width: 210px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .cus_btn, .sm_cus_btn {
+    font-size: 17px;
+    width: 220px;
+  }
+}
+@media only screen and (min-width: 1800px) {
+  .cus_btn, .sm_cus_btn {
+    font-size: 18px;
+    width: 235px;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f6f6f6;
 }
 
-.container {
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-}
 @media only screen and (max-width: 425px) {
   .container {
     padding-left: 20px !important;
@@ -165,51 +204,6 @@ body {
 @media only screen and (min-width: 1800px) {
   .container {
     max-width: 1650px;
-  }
-}
-
-.cus__btn, .strategy_btn {
-  font-family: ECSemiBold;
-  border-radius: 1px;
-  background-color: #ffcd00;
-  color: black !important;
-  display: inline-block;
-  text-decoration: none;
-  border: none;
-  padding: 10px 15px !important;
-  text-align: center;
-}
-.cus__btn, .strategy_btn {
-  font-size: 10px;
-}
-@media screen and (min-width: 310px) {
-  .cus__btn, .strategy_btn {
-    font-size: calc( 10px + 6 * ( (100vw - 310px) / 682 ) );
-  }
-}
-@media screen and (min-width: 992px) {
-  .cus__btn, .strategy_btn {
-    font-size: 16px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .cus__btn, .strategy_btn {
-    font-size: 16px;
-    width: 210px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .cus__btn, .strategy_btn {
-    font-size: 17px;
-    width: 220px;
-  }
-}
-@media only screen and (min-width: 1800px) {
-  .cus__btn, .strategy_btn {
-    font-size: 18px;
-    width: 235px;
-    padding-top: 15px !important;
-    padding-bottom: 15px !important;
   }
 }
 
@@ -393,12 +387,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
   }
 }
@@ -465,11 +454,7 @@ body {
   padding: 15px;
   border: none !important;
   cursor: pointer;
-  -webkit-transform-origin: center center;
-  -ms-transform-origin: center center;
   transform-origin: center center;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
   transition: all 0.5s;
   margin-bottom: 20px;
   border-radius: 1px;
@@ -495,7 +480,6 @@ body {
   .cus_card {
     height: 120px;
     display: grid;
-    -ms-flex-line-pack: center;
     align-content: center;
   }
 }
@@ -518,10 +502,7 @@ body {
   }
 }
 .cus_card:hover {
-  -webkit-box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
   box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
-  -webkit-transform: scale(1.05);
-  -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 @media only screen and (min-width: 992px) {
@@ -867,9 +848,6 @@ body {
 }
 @media only screen and (min-width: 425px) {
   .text__buttons {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: row wrap;
     flex-flow: row wrap;
   }
 }
@@ -911,8 +889,6 @@ body {
 }
 @media only screen and (min-width: 576px) {
   .text__buttons .text_btn_wrap {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -926,8 +902,6 @@ body {
 }
 @media only screen and (min-width: 992px) {
   .text__buttons .text_btn_wrap {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
     justify-content: flex-start;
   }
 }
@@ -939,6 +913,7 @@ body {
     margin-bottom: 0px;
   }
 }
+
 @media only screen and (min-width: 992px) {
   .btn_description_container {
     display: grid;
@@ -1082,7 +1057,6 @@ h6 {
   border-color: transparent !important;
 }
 .navbar .navbar-toggler:focus {
-  -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
 .navbar .navbar-toggler .navbar-icon img {
@@ -1151,8 +1125,6 @@ h6 {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    -webkit-box-align: start;
-    -ms-flex-align: start;
     align-items: flex-start;
     margin-top: 45px;
     padding-bottom: 50px !important;
@@ -1208,7 +1180,6 @@ h6 {
 main #mainContainer .email__form input,
 main #mainContainer .email__form button {
   width: 100%;
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   border: none !important;
   border-radius: 0 !important;
@@ -1280,7 +1251,6 @@ main #mainContainer .email__form input {
 @media only screen and (min-width: 1400px) {
   main #mainContainer .email__form input {
     padding: 17px !important;
-    -ms-flex-preferred-size: 65%;
     flex-basis: 65%;
   }
 }
@@ -1680,7 +1650,6 @@ main #mainContainer .card__element:nth-child(4) {
     display: grid;
   }
   #minimizeDowntime .container .quotes .quotes_owner {
-    -ms-flex-item-align: end;
     align-self: flex-end;
   }
 }
@@ -1756,17 +1725,11 @@ main #mainContainer .card__element:nth-child(4) {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
   }
 }
 .btn_description_container .left_section .text__buttons .img_container {
-  -webkit-box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
   box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
 }
 .btn_description_container .right_section {
@@ -1777,12 +1740,7 @@ main #mainContainer .card__element:nth-child(4) {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 }
@@ -1886,12 +1844,7 @@ main #mainContainer .card__element:nth-child(4) {
 }
 
 .visual_card_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
   flex-flow: column wrap;
 }
 @media only screen and (min-width: 576px) {
@@ -2082,6 +2035,7 @@ main #mainContainer .card__element:nth-child(4) {
     display: block;
   }
 }
+
 @media only screen and (min-width: 992px) {
   #zeroTech .left_section .section_description span {
     margin-top: 0px !important;
