--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,161 +1,19 @@
 // import modules
 @import "_fonts";
+@import "./_variable_&_mixing_&_others.scss";
+
+// import  component 
+@import "./component/_btn_&_links";
+@import "./component/_cards_&_lists";
+@import "./component/_section";
+@import "./component/_typography";
+
 
 * {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-// color code
-$yellow: #ffcd00;
-$blue: #352878;
-$half-blue: #286678;
-$green: #4b7828;
-$zinzar: #602878;
-$half-pink: #fff5cc;
-$half-black: #d1d1d1;
-$little-red: #ff0000;
-$bgWhite: #f6f6f6;
-
-.semiWhite {
-    color: $bgWhite;
-}
-
-// fonts variable
-$bold: ECBold;
-$light: ECLight;
-$medium: ECMedium;
-$regular: ECRegular;
-$semibold: ECSemiBold;
-
-// font class
-.light {
-    font-family: $light;
-}
-.regular {
-    font-family: $regular;
-}
-.medium {
-    font-family: $medium;
-}
-.semiBold {
-    font-family: $semibold;
-}
-.bold {
-    font-family: $bold;
-}
-
-// color class generator
-$color-list: (
-    "yellow": $yellow,
-    "blue": $blue,
-    "half-blue": $half-blue,
-    "green": $green,
-    "zinzar": $zinzar,
-    "half-pink": $half-pink,
-    "half-black": $half-black,
-    "little-red": $little-red,
-    "lateWhite": $bgWhite,
-);
-
-@each $name, $color in $color-list {
-    .#{$name} {
-        color: $color !important;
-    }
-    .bg-#{$name} {
-        background-color: $color !important;
-    }
-}
-// color class
-
-// responsive break points
-$msm: 310px;
-$xs: 425px;
-$sm: 576px;
-$md: 768px;
-$lg: 992px;
-$xl: 1200px;
-$xxl: 1400px;
-$mxl: 1800px;
-
-// mixing section
-@mixin resp($width) {
-    @media only screen and (min-width: $width) {
-        @content;
-    }
-}
-// max responsive
-@mixin mxResp($width) {
-    @media only screen and (max-width: $width) {
-        @content;
-    }
-}
-
-// auto responsive write
-$breakPointLists: 1800px, 1400px, 1200px, 992px, 768px, 576px, 425px, 0px;
-@mixin respLists($propertyName, $propertyValue) {
-    @for $i from 1 to 9 {
-        @include resp(nth($list: $breakPointLists, $n: $i)) {
-            #{$propertyName}: nth($list: $propertyValue, $n: $i);
-        }
-    }
-}
-
-// fluid fonts
-@function strip-unit($value) {
-    @return $value / ($value * 0 + 1);
-}
-
-@mixin font-size($min-vw, $max-vw, $min-font-size, $max-font-size) {
-    $u1: unit($min-vw);
-    $u2: unit($max-vw);
-    $u3: unit($min-font-size);
-    $u4: unit($max-font-size);
-
-    @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
-        & {
-            font-size: $min-font-size;
-            @media screen and (min-width: $min-vw) {
-                font-size: calc(
-                    #{$min-font-size} + #{strip-unit(
-                            $max-font-size - $min-font-size
-                        )} *
-                        (
-                            (100vw - #{$min-vw}) / #{strip-unit(
-                                    $max-vw - $min-vw
-                                )}
-                        )
-                );
-            }
-            @media screen and (min-width: $max-vw) {
-                font-size: $max-font-size;
-            }
-        }
-    }
-}
-
-// font size and line height
-@mixin fsizeHeight($f, $h) {
-    font-size: $f;
-    line-height: $h;
-}
-
-@mixin fSmallToLarge($font-small, $font-large) {
-    @include font-size($msm, $lg, $font-small, $font-large);
-}
-@mixin fLargeToExtraLarge($font-small, $font-large) {
-    @include font-size($lg, $mxl, $font-small, $font-large);
-}
-// minimum to maximum media query
-@mixin minMax($min, $max) {
-    @media only screen and (min-width: $min) and (max-width: $max) {
-        @content;
-    }
-}
-
-// responsive list property  applyer
 
 // global common style ------------------------------
 body {
@@ -163,9 +21,6 @@ body {
 }
 // container modification
 .container {
-    -webkit-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
     @include mxResp($xs) {
         padding-left: 20px !important;
         padding-right: 20px !important;
@@ -180,32 +35,7 @@ body {
 }
 
 // button component
-.cus__btn {
-    font-family: $semibold;
-    border-radius: 1px;
-    background-color: $yellow;
-    color: black !important;
-    display: inline-block;
-    text-decoration: none;
-    border: none;
-    padding: 10px 15px !important;
-    text-align: center;
-    @include font-size($msm, $lg, 10px, 16px);
-    @include resp($lg) {
-        font-size: 16px;
-        width: 210px;
-    }
-    @include resp($xl) {
-        font-size: 17px;
-        width: 220px;
-    }
-    @include resp($mxl) {
-        font-size: 18px;
-        width: 235px;
-        padding-top: 15px !important;
-        padding-bottom: 15px !important;
-    }
-}
+
 
 .strategy_btn {
     @extend .cus__btn;
@@ -326,12 +156,7 @@ body {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
         flex-flow: column wrap;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
         justify-content: center;
     }
     @include resp($xl) {
@@ -388,11 +213,7 @@ body {
     padding: 15px;
     border: none !important;
     cursor: pointer;
-    -webkit-transform-origin: center center;
-    -ms-transform-origin: center center;
     transform-origin: center center;
-    -webkit-transition: all 0.5s;
-    -o-transition: all 0.5s;
     transition: all 0.5s;
     margin-bottom: 20px;
     border-radius: 1px;
@@ -410,7 +231,6 @@ body {
     @include resp($lg) {
         height: 120px;
         display: grid;
-        -ms-flex-line-pack: center;
         align-content: center;
     }
     @include resp($xl) {
@@ -427,10 +247,7 @@ body {
     }
 
     &:hover {
-        -webkit-box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
         box-shadow: 1px 1px 4px #c8c8c8, -1px -1px 4px #c8c8c8;
-        -webkit-transform: scale(1.05);
-        -ms-transform: scale(1.05);
         transform: scale(1.05);
         @include resp($lg) {
             -webkit-transform: scale(1.025);
@@ -647,9 +464,6 @@ body {
 .text__buttons {
     margin-top: 10px;
     @include resp($xs) {
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
         flex-flow: row wrap;
     }
     // button text medium
@@ -673,8 +487,6 @@ body {
     // text and btn wrapper
     .text_btn_wrap {
         @include resp($sm) {
-            display: -webkit-box;
-            display: -ms-flexbox;
             display: flex;
             flex-flow: row wrap;
             justify-content: space-between;
@@ -684,8 +496,6 @@ body {
             }
         }
         @include resp($lg) {
-            -webkit-box-pack: start;
-            -ms-flex-pack: start;
             justify-content: flex-start;
         }
         // texts
@@ -693,9 +503,6 @@ body {
             margin-bottom: 15px;
             @include resp($sm) {
                 margin-bottom: 0px;
-            }
-            // button description
-            .button_description {
             }
         }
     }
@@ -814,7 +621,6 @@ h6 {
         border-color: transparent !important;
         // focus
         &:focus {
-            -webkit-box-shadow: none !important;
             box-shadow: none !important;
         }
         .navbar-icon {
@@ -867,8 +673,6 @@ main {
             display: grid;
             grid-template-columns: repeat(6, 1fr);
             grid-template-rows: repeat(6, 1fr);
-            -webkit-box-align: start;
-            -ms-flex-align: start;
             align-items: flex-start;
             margin-top: 45px;
             padding-bottom: 50px !important;
@@ -913,7 +717,6 @@ main {
             input,
             button {
                 width: 100%;
-                -ms-flex-preferred-size: 100%;
                 flex-basis: 100%;
                 border: none !important;
                 border-radius: 0 !important;
@@ -947,7 +750,6 @@ main {
                 }
                 @include resp($xxl) {
                     padding: 17px !important;
-                    -ms-flex-preferred-size: 65%;
                     flex-basis: 65%;
                 }
                 @include resp($mxl) {
@@ -1260,7 +1062,6 @@ main {
                 grid-column: 1/6;
                 display: grid;
                 .quotes_owner {
-                    -ms-flex-item-align: end;
                     align-self: flex-end;
                 }
             }
@@ -1344,17 +1145,11 @@ main {
                 display: -webkit-box;
                 display: -ms-flexbox;
                 display: flex;
-                -webkit-box-pack: justify;
-                -ms-flex-pack: justify;
                 justify-content: space-between;
-                -webkit-box-orient: vertical;
-                -webkit-box-direction: normal;
-                -ms-flex-flow: column wrap;
                 flex-flow: column wrap;
             }
             // sample image
             .img_container {
-                -webkit-box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
                 box-shadow: -3px -3px 10px #c8c8c8, 3px 3px 10px #c8c8c8;
             }
         }
@@ -1366,12 +1161,7 @@ main {
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
-            -ms-flex-flow: column wrap;
             flex-flow: column wrap;
-            -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
             justify-content: space-between;
         }
         // image wrap
@@ -1453,12 +1243,7 @@ main {
 
 // virtual card list
 .visual_card_list {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column wrap;
     flex-flow: column wrap;
     // card decoration
     @include resp($sm) {
@@ -1623,10 +1408,6 @@ main {
                     display: block;
                 }
             }
-        }
-        // custom button
-        .cus__btn {
-            // @include resp()
         }
     }
 }
