--- a/css/main.css
+++ b/css/main.css
@@ -50,11 +50,11 @@
   font-family: ECRegular;
 }
 
-.medium {
+.medium, .batch-mark-des-big {
   font-family: ECMedium;
 }
 
-.semiBold, .visual_card_list .logoCard .icon_wrap .des span, .small_section_heading {
+.semiBold, .visual_card_list .logoCard .icon_wrap .des span, .small_section_heading, .batch-mark-des {
   font-family: ECSemiBold;
 }
 
@@ -135,7 +135,8 @@
 }
 
 .high-1 {
-  font-size: calc(26px + 44 * ((100vw - 310px) / 682));
+  margin: 0px;
+  font-size: calc(25px + 44 * ((100vw - 310px) / 682));
   line-height: 125%;
 }
 @media only screen and (min-width: 992px) {
@@ -209,27 +210,27 @@
   }
 }
 
-.high-4 {
+.high-4, .batch-mark-des-big {
   font-size: calc(1.3rem + 0.6vw);
   line-height: 115%;
 }
 @media only screen and (min-width: 992px) {
-  .high-4 {
+  .high-4, .batch-mark-des-big {
     font-size: 30px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  .high-4 {
+  .high-4, .batch-mark-des-big {
     font-size: 35px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  .high-4 {
+  .high-4, .batch-mark-des-big {
     font-size: 42px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  .high-4 {
+  .high-4, .batch-mark-des-big {
     font-size: 50px;
   }
 }
@@ -253,6 +254,15 @@
   .batch-2 {
     font-size: 15.8px;
   }
+}
+
+@media screen and (max-width: 420px) {
+  .batch-mark-des-big {
+    font-size: 1.2rem;
+  }
+}
+.batch-mark-des-big span {
+  background-color: #fbf2cb;
 }
 
 .description-1 {
@@ -491,6 +501,7 @@
   width: 215px;
   padding: 28px 30px;
   border-radius: 1px;
+  padding-right: 5px !important;
 }
 @media only screen and (min-width: 992px) {
   .card {
@@ -501,7 +512,6 @@
   .card {
     width: 200px;
     padding-top: 30px;
-    padding-right: 0px;
   }
 }
 @media only screen and (min-width: 1400px) {
@@ -1149,23 +1159,23 @@ body {
   }
 }
 
-.small_section_heading {
+.small_section_heading, .batch-mark-des {
   color: #352878;
 }
-.small_section_heading {
+.small_section_heading, .batch-mark-des {
   font-size: 13px;
 }
 @media screen and (min-width: 425px) {
-  .small_section_heading {
+  .small_section_heading, .batch-mark-des {
     font-size: calc( 13px + 6 * ( (100vw - 425px) / 1375 ) );
   }
 }
 @media screen and (min-width: 1800px) {
-  .small_section_heading {
+  .small_section_heading, .batch-mark-des {
     font-size: 19px;
   }
 }
-.small_section_heading span {
+.small_section_heading span, .batch-mark-des span {
   background-color: #fbf2cb;
 }
 
@@ -2049,12 +2059,12 @@ main #mainContainer .card__element:nth-child(4) {
   height: 45%;
 }
 @media only screen and (min-width: 1400px) {
-  .btn_description_container .left_section .small_section_heading {
+  .btn_description_container .left_section .small_section_heading, .btn_description_container .left_section .batch-mark-des {
     font-size: 19px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  .btn_description_container .left_section .small_section_heading {
+  .btn_description_container .left_section .small_section_heading, .btn_description_container .left_section .batch-mark-des {
     font-size: 20.5px;
   }
 }
@@ -2864,37 +2874,37 @@ main #mainContainer .card__element:nth-child(4) {
     width: 15px;
   }
 }
-.oldWayStyles .container .allListWrapper .item_list .list li .medium {
+.oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
   font-size: 16px;
   text-decoration: line-through;
 }
 @media only screen and (min-width: 576px) {
-  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
     font-size: 12px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
     font-size: 17px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
     font-size: 20px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
     font-size: 22px;
   }
 }
 @media only screen and (min-width: 1400px) {
-  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
     font-size: 26px;
   }
 }
 @media only screen and (min-width: 1800px) {
-  .oldWayStyles .container .allListWrapper .item_list .list li .medium {
+  .oldWayStyles .container .allListWrapper .item_list .list li .medium, .oldWayStyles .container .allListWrapper .item_list .list li .batch-mark-des-big {
     font-size: 28px;
   }
 }
@@ -3663,6 +3673,10 @@ main #mainContainer .card__element:nth-child(4) {
   }
 }
 
+.about-us main .container {
+  display: grid;
+  grid-template-columns: repeat();
+}
 * {
   margin: 0;
   padding: 0;
